# data-structures-for-teaching

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: check.yaml  greetings.yml  main.yaml
algorithms/binary_search/: binarysearch.py
algorithms/number_theory/: eratosthenes_sieve.py  modular_arithmetics.py
algorithms/searching/: base_string.py  binary_search.py  kmp.py  lineal_search.py  linear_search.py  search.py
algorithms/sorting/: bogo_sort.py  bubble_sort.py  bubblesort.py  counting_sort.py  gnome_sort.py  heap_sort.py  heapsort.py  insertionsort.py  merge_sort.py  mergesort.py  quick_sort.py  quicksort.py  selection_sort.py  selectionsort.py  shell_sort.py  sort.py
algorithms/strings/: base_string.py  kmp.py  naive.py
data_structures/Linked List/: linked_list.py
data_structures/graphs/: implementation.py  queues.py  search.py
data_structures/heap/: implementation.py  running_median.py
data_structures/stack/: client.py  (+2 more)
graphs/: implementation.py  queues.py  search.py  tower_defense.py
priority-queues/: moving_balls.py
stack/: client.py  two_stack_parser.py
tests/: test_binary_search.py  test_eratosthenes_sieve.py  test_heap.py  test_kmp.py  test_linked_list.py  test_linkedlist.py  test_modular_arithmetics.py  test_naive.py  test_queues.py  test_searching.py  test_sorting.py  test_stack.py  test_trie.py  test_union_find.py
union-find/: client.py  implementation.py  percolation.py
union_find/: client.py  implementation.py  percolation.py
(+17 files in other folders)
