[tool.poetry]
name = "data-structures-for-teaching"
version = "0.1.0"
description = "Implementations of some Data Structures, with different approaches and some practical applications"
authors = [
  "Alberto González Rosales <albexxl27@gmail.com>"
]
maintainers = [

]
license = "MIT"
readme = "README.md"
repository = "https://github.com/albexl/data-structures-for-teaching"
packages = [{include = "data_structures_for_teaching"}]

[tool.poetry.dependencies]
python = "^3.10"
pydot = "^1.4.2"
pygame = "^2.1.2"
typer = "^0.7.0"
typing-extensions = "^4.4.0"

[tool.poetry.group.test.dependencies]
parameterized = "^0.8.1"
pytest = "^7.2.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.10"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
